# dander

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-python.md  code-sql.md  code-terraform.md  design.md  documentation.md  pr-review.md  product.md
.claude/commands/: feature.md
.claude/hooks/: check-secrets.sh
.claude/workflows/: build.js  feature.js
connectors/: greenhouse.yaml
infra/: README.md  versions.tf
models/staging/: stg_greenhouse__candidates.sql  stg_greenhouse__candidates.yml
scripts/: watch_workflows.py
src/dander/: __init__.py
steering/: 00-project-overview.md  01-security.md  02-engineering.md
steering/languages/: python.md  sql.md  terraform.md
tests/: test_smoke.py
tests/ingestion/: test_pagination.py  test_rate_limit_config.py
tickets/: DANDER-1-parse-refs.md  DANDER-10-typed-node-config.md  DANDER-11-source-request-spec.md  DANDER-12-pagination-strategy.md  DANDER-13-rate-limit-backoff-config.md  DANDER-14-trigger-schedule-definitions.md  DANDER-15-custom-code-transformation-kind.md  DANDER-16-target-writer-node-config.md  DANDER-17-field-casting-and-tests.md  DANDER-18-watermark-cursor-strategy.md  DANDER-19-node-visual-layout-metadata.md  DANDER-2-pipeline-graph-model.md  DANDER-3-pipeline-graph-validation.md  DANDER-4-node-field-schema.md  DANDER-5-edge-field-mapping.md  DANDER-6-connection-transformations.md  DANDER-7-connection-join-spec.md  DANDER-8-field-mapping-validation.md  DANDER-9-pipeline-fields-mappings-docs.md  README.md  TEMPLATE.md
(+44 files in other folders)
