[project]
name = "dander"
version = "0.0.1"
description = "Opinionated, GCP-native, self-hosted data platform: ingest + transform + catalog behind one CLI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "dlt[bigquery]>=1.0",            # standard-REST ingestion path (hybrid decision)
  "google-cloud-bigquery>=3.25",
  "google-cloud-secret-manager>=2.20",
  "pydantic>=2.7",                 # config + boundary models
  "pydantic-settings>=2.3",
  "typer>=0.12",                   # CLI
  "jinja2>=3.1",                   # transform templating (ref())
  "sqlglot>=25.0",                 # SQL parsing for the transform DAG
  "httpx>=0.27",                   # enterprise-source transport
  "tenacity>=8.5",                 # backoff/retry for the hand-rolled path
  "pyyaml>=6.0",
]

[project.scripts]
dander = "dander.cli.main:app"

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dander"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
